crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R3_plus_R1.stderr
error[E0369]: cannot add `Relative<1>` to `Relative<3>`
 --> tests/ui/generated/should_fail/test__kiss_ladder__R3_plus_R1.rs:5:22
  |
5 |    let _ = R3::new() + R1::new();
  |            --------- ^ --------- Relative<1>
  |            |
  |            Relative<3>
